--- a/lab05/.vscode/settings.json
+++ b/lab05/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
-    "java.project.sourcePaths": ["src"],
+    "java.project.sourcePaths": [
+        "src",
+        "ejercicio_01/ejercicio_01"
+    ],
     "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
         "lib/**/*.jar"
